fix absolute on iphone

--- a/_src/scss/_news-section.scss
+++ b/_src/scss/_news-section.scss
@@ -59,6 +59,7 @@
         top: 0;
         transform: translate(-50%, 0);
         -moz-transform: translate(50%, 0);
+        -webkit-transform:  translate(-50%, 0);
         border-radius: 0 0 20px 20px;
         text-align: center;
         font-size: 12px;
